# cyber-response-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  board.html  cyber-respone-agent-design-alternative.md  cyber-response-agent-design-v2.md  init-db.sql  playground-setup-v2.md  playground-setup.md  todo.md
defender/: .venv  CLAUDE.md  SKILL.md  _clock.py  _corpus.py  _env.py  _first_party_key.py  _frontmatter.py  _git.py  _io.py  _paths.py  _run_id.py  _run_paths.py  _tsv.py  _untrusted.py  _yaml.py  agents.py  dispatch.py  lead_sequence_schema.md  pyproject.toml  run-settings.json  run.py  run.sh  run_artifacts.md  run_common.py  run_pai.py
defender/docs/: agent-definition-consolidation-step-three.md  agent-definition-single-source.md  agent-harness-construction-design.md  case-history-write-path.md  error-disposition-types-design.md  gather-verifiable-summary.md  git-seam-design.md  lead-author-failure-pitfalls.md  lead-author-refinement.md  learning-loop-actor-design.md  learning-loop-actor-learning.md  learning-loop-decision-supervision.md  learning-loop.md  lessons-actor-schema-v2.md  lessons-success-scoring.md  runtime-gates.md  runtime-per-loop-compaction-design.md  runtime-pydanticai-migration.md  runtime-sandbox-design.md  state-surface-adapters.md  system-skill-shape.md
defender/environment/: SKILL.md
defender/evals/: .gitignore  README.md  _generation.py  _harness_util.py  _pipeline.py  _secondary_config.py  _summary.py  harness.py  harness_lead.py  held_out.py  judge_equivalence.py  run_judge_ab.py  secondary.py  test_judge_equivalence.py  test_run_judge_ab.py  test_secondary.py
defender/examples/: example-b-parallel-iam-cmdb.md  example-c-cumulative-escalation.md
defender/hooks/: _cmd_segments.py  _run_dir.py  approve_shim_invocations.py  block_main_loop_raw_access.py  block_unwrapped_adapter_calls.py  budget_enforcer.py  extract_lead_metadata.py  inject_system_skill_description.py  invlang_validate.py  record_lead.py  record_lesson_load.py  tag_tool_results.py
defender/learning/: _agent_stream.py  _author_curator.py  _author_runner.py  _author_shared.py  _loop_comparison.py  _loop_config.py  _loop_directions.py  _loop_exemplars.py  _loop_oracle.py  _loop_orchestrate.py  _loop_persist.py  _loop_subagents.py  _loop_validate.py  _oracle_router.py  _prologue.py  _verify_forward_shared.py  actor-settings.json  actor.md  actor_benign.md  agent_surface.py  author.md  author.py  author_actor.md  author_actor.py  author_actor_benign.md  author_actor_benign.py  author_actor_env.py  author_branch.py  benign-actor-settings.json  customization_prompt.md  customization_test.py  eval_held_out.py  eval_secondary.py  footprint.md  green_bar.py  judge.md  judge_benign.md  lead_author.md  lead_author.py  lead_classifier.py  (+22 more)
defender/lessons/: auth-log-scope-does-not-cover-post-auth-behavior.md  authorized-pivot-fim-check-before-close.md  authz-scope-discrepancy-needs-reconciliation-lead.md  bastion-session-interactivity-signal.md  behavioral-anomaly-needs-affirmative-explanation.md  concurrent-anomaly-burst-requires-lead.md  container-exec-missing-identity-lead.md  container-id-anchor-before-uid-lookup.md  container-identity-gap-not-terminal.md  docker-host-invocation-tracing-unavailable.md  falco-loginuid-tty-non-interactive-not-docker-exec.md  falco-terminal-phase-no-upstream-chain.md  idp-ssh-ca-no-host-telemetry.md  non-container-host-persistence-paths-outside-falco.md  post-auth-lead-targets-landing-host-not-source.md  source-ip-check-auth-log-not-just-enrollment.md  ssh-pivot-upstream-credential-harvest-lead.md  sshd-auth-method-token-is-hypothesis-discriminator.md
defender/lessons-actor/: _TEMPLATE.md  authorized-keys-artifact-state-bypass.md  authorized-keys-host-cr-baseline.md  authorized-keys-key-accumulation-detection.md  baseline-indistinguishability-requires-dimension-verification.md  bashrc-non-interactive-persistence-gap.md  container-1df4bcd65ee4-role.md  container-uid-namespace-isolation.md  cover-prereqs-must-exist-in-deployment.md  cross-tier-ssh-auth-method.md  cross-tier-ssh-session-duration-baseline.md  dev-ws-1-cmdb-trust-profile.md  falco-stdout-stdin-network-redirect-rule.md  ip-resolution-gates-session-mimicry.md  jump-box-1-ip-assignment.md  nc-cmdline-destination-as-primary-discriminator.md  single-probe-anomaly-against-existing-cadence.md  source-identity-authorization-inversion.md  ssh-brute-force-timing-mimicry.md  ssh-entry-auth-event-undercuts-endpoint-bypass.md  ssh-exfil-falco-rule-coverage.md  sshd-rule-entry-vs-upstream-session-cover.md  sshd-success-preauthentication-shell-envelope.md  sshd-success-session-and-cadence-detection.md  svc-monitoring-network-probe-cadence-baseline.md  svc-monitoring-non-interactive-invocation.md  uid-identity-verify-in-target-container.md  wazuh-rule-5712-threshold.md
defender/lessons-environment/: _TEMPLATE.md  authorized-keys-host-cr-baseline.md  authorized-keys-key-accumulation-detection.md  cmdb-indexes-by-hostname-not-ip.md  container-1df4bcd65ee4-role.md  container-uid-namespace-isolation.md  cross-tier-ssh-auth-method.md  cross-tier-ssh-session-duration-baseline.md  dev-workstation-to-jump-box.md  dev-ws-1-cmdb-trust-profile.md  falco-stdout-stdin-network-redirect-rule.md  jump-box-1-ip-assignment.md  sshd-success-preauthentication-shell-envelope.md  sshd-success-session-and-cadence-detection.md  svc-monitoring-network-probe-cadence-baseline.md  svc-monitoring-non-interactive-invocation.md  wazuh-rule-5712-threshold.md
defender/run-transcripts/: .gitignore  README.md
defender/runtime/: __init__.py  agent_definition.py  agent_role.py  agents.py  bash_exec.py  bash_policy.json  bash_policy.py  box.py  circuit_breaker.py  compaction.py  driver.py  gnu_flags.py  observe.py  orient.py  permission.py  query_tool.py  ticket_screen.py  tools.py  tools_gather.py  untrusted.py  verbs.py
defender/scripts/: _an.py  _cost.py  _venv.py  compaction_dryrun.py  gather_only.py  lead_filters.py  lessons_actor_index.py  lessons_env_retrieve.py  (+15 more)
soc-agent/: .venv  README.md  pyproject.toml
(+3633 files in other folders)
