[project]
name = "defender"
version = "0.0.0"
description = "Defender / learning-loop agent (v2 environment)."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Runtime investigation loop (PydanticAI migration off `claude -p`; see
# docs/runtime-pydanticai-migration.md). Kept out of the core deps so
# learning-loop / CI installs (which are SIEM- and runtime-free) don't pull
# the Anthropic + MCP stack. Slim variant + extras only — no other model
# providers. Install with: uv pip install -e '.[runtime]'.
runtime = [
    "pydantic-ai-slim[anthropic,mcp]>=1.107",
]
dev = [
    "pytest>=8.0",
    "ruff",
    "vulture",
    "radon",
]

[tool.pytest.ini_options]
# Put the workspace root (rootdir is defender/, so "..") on sys.path for every
# test, so `defender.*` namespace imports resolve in tests under both tests/ and
# learning/ — in isolation or in a full run — without per-file sys.path hacks.
pythonpath = [".."]
markers = [
    "llm: spawns a real claude -p subprocess (skip in CI with -m 'not llm')",
    "live: requires live external infrastructure (skip in CI with -m 'not live')",
]

[tool.uv]
package = false

# defender is not an importable package — its modules are invoked by path
# (run.py re-execs into the venv; learning/ does sys.path.insert). The
# pyproject exists only to declare deps + the venv. Without this, an
# editable install (`uv pip install -e .`) triggers setuptools flat-layout
# auto-discovery, which errors on the multiple top-level dirs (hooks/,
# skills/, learning/, …). Discover nothing: install metadata + deps only.
[tool.setuptools]
py-modules = []

[tool.ruff.lint]
# Hard gate (CI-blocking) is `select = ["E","F"]` minus E402/E501, run with
# explicit flags. The extra rule sets below are layered in via extend-select and
# reported in CI as a non-blocking code-smell signal. Hard gate locally:
#   ruff check . --select E,F --ignore E402,E501
# Full smell sweep:  ruff check .
select = ["E", "F"]
extend-select = [
    "B",             # flake8-bugbear: real bug patterns (mutable defaults, etc.)
    "SIM",           # flake8-simplify: redundant logic
    "C901",          # mccabe complexity
    "PLR0912",       # too-many-branches
    "PLR0913",       # too-many-arguments
    "PLR0915",       # too-many-statements
    "PT",            # flake8-pytest-style
    "UP",            # pyupgrade
]
# E402: tests/scripts intentionally do sys.path.insert(...) before imports.
# E501: line length is enforced by formatter, not lint.
ignore = ["E402", "E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-branches = 15
max-args = 8
max-statements = 60
