[project]
name = "defender"
version = "0.0.0"
description = "Defender / learning-loop agent (v2 environment)."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Runtime investigation loop (in-process PydanticAI). Kept out of the core deps so
# learning-loop / CI installs (which are SIEM- and runtime-free) don't pull
# the Anthropic + MCP stack. Slim variant + extras: anthropic is the default
# provider; openai backs the Fireworks OpenAI-compatible path (GLM 5.2, selected
# via a `fireworks:`/`glm-*` model id). Install with: uv pip install -e '.[runtime]'.
runtime = [
    "pydantic-ai-slim[anthropic,mcp,openai]>=1.107",
    # duckdb — the engine behind the `defender-sql` shim
    # (scripts/gather_tools/sql.py), the gather subagent's aggregation
    # fallback for filter-only sources (no server-side aggregation of their
    # own): it pipes an adapter's rows through SQL the model already
    # knows, instead of a bespoke reducer (see skills/connect/adapter.md
    # "Prefer native aggregation"). The shim imports the Python module and
    # runs the SQL in a sealed sandbox, so no separate `duckdb` CLI binary
    # is needed. Sources with a native aggregating query language
    # (elastic → ES|QL) never reach for it.
    "duckdb>=1.5,<2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "coverage",
    "ruff",
    "vulture",
    "radon",
    "mypy",
]

[tool.pytest.ini_options]
# Put the workspace root (rootdir is defender/, so "..") on sys.path for every
# test, so `defender.*` namespace imports resolve in tests under both tests/ and
# learning/ — in isolation or in a full run — without per-file sys.path hacks.
pythonpath = [".."]
markers = [
    "live: requires live external infrastructure (skip in CI with -m 'not live')",
    "e2e: hermetic FunctionModel replay of the runtime driver (no API key; needs the runtime extra)",
]

[tool.uv]
package = false

# defender is not an importable package — its modules are invoked by path
# (run.py re-execs into the venv; learning/ does sys.path.insert). The
# pyproject exists only to declare deps + the venv. Without this, an
# editable install (`uv pip install -e .`) triggers setuptools flat-layout
# auto-discovery, which errors on the multiple top-level dirs (hooks/,
# skills/, learning/, …). Discover nothing: install metadata + deps only.
[tool.setuptools]
py-modules = []

[tool.mypy]
# Type-check gate (issue #403). BLOCKING: mypy runs in CI's lint job with no
# `|| true` — the tree is at zero errors under this config, so a new type error
# fails CI. Config is still permissive (no disallow_untyped_defs); the next ramp
# steps (pin cleared modules strict via [[tool.mypy.overrides]], fold in tests)
# are documented in docs/decisions/defender-mypy-ramp.md.
#
# Invoked from the REPO ROOT (matching the other lint/code-smells steps) as
#   defender/.venv/bin/mypy --config-file defender/pyproject.toml
# so `files`/`mypy_path` below are relative to the repo root, not defender/.
python_version = "3.11"
files = ["defender"]
# defender/ is a namespace tree: no top-level package, modules invoked by path,
# tests sys.path.insert("..") (so imports resolve as `defender.*`). mypy_path +
# explicit_package_bases + namespace_packages give every file a unique dotted
# module name (`defender.runtime.driver`, …), dodging the duplicate-module crash
# a bare run hits on the repeated leaf names (conftest.py, _cli.py, __init__-less
# dirs).
mypy_path = "."
namespace_packages = true
explicit_package_bases = true
# Scope the soft-launch to shippable modules: .venv (third-party sources) and the
# test tree are excluded. Tests lean on duck-typed fakes (a bare object() passed
# where a typed deps struct is expected) that mypy can't see through — high-noise,
# low-value for the production-typing ramp. Folding tests in is a later ramp step
# (see docs/decisions/defender-mypy-ramp.md), matching how the ruff families
# graduated one group at a time.
exclude = ['(^|/)\.venv/', '(^|/)tests/', '(^|/)test_[^/]*\.py$', '(^|/)conftest\.py$']
ignore_missing_imports = true
follow_imports = "silent"
# Surface type errors without blocking on every untyped def. Tighten per module
# via [[tool.mypy.overrides]] (disallow_untyped_defs = true) as each clears.
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff.lint]
# Lint gates, two tiers (issue #400 — extended-ruff drain complete):
#   1. Repo-wide hard gate — E,F only, run in CI with explicit flags
#      (`ruff check . --select E,F --ignore E402,E501`) so it stays uniform over
#      the whole repo; experiments/ + root scripts/ are E,F-only by design.
#   2. Defender-scoped hard gate — the full `select` below, run config-driven as
#      `ruff check defender` in ci.yml. The extended families graduated here from
#      a non-blocking signal one group at a time as their violations cleared; all
#      are now clean in defender/ and blocking.
# Full local gate:  ruff check defender
select = [
    "E",
    "F",
    "B",             # flake8-bugbear: real bug patterns (mutable defaults, etc.)
    "SIM",           # flake8-simplify: redundant logic
    "C901",          # mccabe complexity
    "PLR0912",       # too-many-branches
    "PLR0913",       # too-many-arguments
    "PLR0915",       # too-many-statements
    "PT",            # flake8-pytest-style
    "UP",            # pyupgrade
]
# E402: tests/scripts intentionally do sys.path.insert(...) before imports.
# E501: line length is enforced by formatter, not lint.
ignore = ["E402", "E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-branches = 15
max-args = 8
max-statements = 60
