[project]
name = "soc-agent"
version = "0.1.0"
description = "Hypothesis-driven security alert triage agent"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Investigation-language query tool (scripts/invlang/)
query = [
    "pyyaml>=6.0",
    "polars>=1.0",
]
# Wazuh SIEM connector (scripts/tools/wazuh_cli.py)
wazuh = [
    "opensearch-py>=3.0",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
    "mypy",
    "ipython",
    "debugpy",
    "httpx",
    # pull query + wazuh deps into dev as well
    "pyyaml>=6.0",
    "polars>=1.0",
    "opensearch-py>=3.0",
]
[tool.setuptools]
packages = []  # Not a traditional package — scripts are invoked directly
