[project]
name = "soc-agent"
version = "0.1.0"
description = "Hypothesis-driven security alert triage agent"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
]

[project.optional-dependencies]
# Investigation-language query tool (scripts/invlang/)
query = [
    "pyyaml>=6.0",
    "polars>=1.0",
]
# Wazuh SIEM connector (scripts/tools/wazuh_cli.py)
wazuh = [
    "opensearch-py>=3.0",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
    "ruff",
    "vulture",
    "radon",
    "ipython",
    "debugpy",
    "httpx",
    # pull query + wazuh deps into dev as well
    "pyyaml>=6.0",
    "polars>=1.0",
    "opensearch-py>=3.0",
    "python-frontmatter>=1.1",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
]
[tool.setuptools]
packages = []  # Not a traditional package — scripts are invoked directly

[tool.ruff.lint]
# Hard gate (CI-blocking) is `select = ["E","F"]` minus E402. The extra rule
# sets below are layered in via `extend-select` and reported in CI as a
# code-smell signal (non-blocking) until the codebase is cleaned up enough
# to enforce them. To run only the hard gate locally:
#   ruff check . --select E,F --ignore E402
# To run the full smell sweep:
#   ruff check .
select = ["E", "F"]
extend-select = [
    "B",             # flake8-bugbear: real bug patterns (mutable defaults, etc.)
    "SIM",           # flake8-simplify: redundant logic
    "C901",          # mccabe complexity
    "PLR0912",       # too-many-branches
    "PLR0913",       # too-many-arguments
    "PLR0915",       # too-many-statements
    "PT",            # flake8-pytest-style
    "UP",            # pyupgrade
]
# E402: tests/scripts intentionally do sys.path.insert(...) before imports.
# E501: line length is enforced by formatter, not lint.
ignore = ["E402", "E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-branches = 15
max-args = 8
max-statements = 60

[tool.mypy]
python_version = "3.11"
files = ["soc-agent"]
exclude = ["soc-agent/tests/", "soc-agent/.venv/"]
ignore_missing_imports = true
follow_imports = "silent"
# Soft-launch posture: surface type errors without blocking on every
# untyped def. Tighten incrementally.
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.vulture]
paths = ["soc-agent"]
exclude = ["soc-agent/tests/", "soc-agent/.venv/"]
min_confidence = 80
# key_field, key_value: abstract-method params on AdapterContract.lookup
# (vulture can't see subclass usage).
ignore_names = ["key_field", "key_value"]

# Pytest markers ("llm", "live") are registered in soc-agent/tests/conftest.py.
# Coverage (pytest-cov) is opt-in; invoke with `pytest --cov=soc-agent` when needed.

[tool.coverage.run]
# Many hooks and CLIs are exercised by tests via subprocess. Without
# parallel mode + a process-startup shim, those code paths look uncovered
# even though hundreds of tests run them. tests/conftest.py installs a
# .pth shim into the venv on import and points COVERAGE_PROCESS_START at
# this config so child processes record coverage too.
parallel = true
sigterm = true
# Coverage matches `source` against importable package names; "soc-agent"
# (with a hyphen) is not importable, so we list the top-level packages we
# actually ship instead.
source = ["hooks", "schemas", "scripts"]
omit = [
    ".venv/*",
    "tests/*",
    # Dev / human-driven CLIs without test coverage — exercised manually or
    # via integration only. Pulling them into the baseline drives the wrong
    # incentive (write smoke tests that import-but-don't-assert). Files with
    # actual tests (preflight, cleanup_runs, env_memory_lint, postmortem/*)
    # stay in.
    "scripts/observe.py",                # live observability HTTP server
    "scripts/fetch_alert.py",            # manual playground utility
    "scripts/lint_mock_usage.py",        # standalone lint, run by CI separately
    "scripts/run_orchestrator.py",       # entry point — covered by `-m llm` only
    "scripts/query.py",                  # ad-hoc query wrapper
    "scripts/_report_append_helper.py",  # one-shot REPORT append helper
    "scripts/invlang/__main__.py",       # `python -m invlang` shim
]

[tool.coverage.paths]
# Collapse subprocess-recorded paths onto a single canonical form so
# combine() merges parent + child data files even when one side recorded
# absolute paths.
hooks = ["hooks", "*/soc-agent/hooks"]
schemas = ["schemas", "*/soc-agent/schemas"]
scripts = ["scripts", "*/soc-agent/scripts"]

[tool.coverage.report]
show_missing = true
skip_covered = false
